feat(MVP): e2e tests

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,17 @@ services:
     networks:
       - cybus-network
     container_name: cybus-db
+  test-db:
+    image: postgres:13
+    ports:
+      - '5435:5432'
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 123
+      POSTGRES_DB: cybus
+    networks:
+      - cybus-network
+    container_name: cybus-test-db
 
 networks:
   cybus-network:
