--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "shpjs": "^6.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -58,6 +59,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
     "@types/passport-jwt": "^4.0.1",
+    "@types/shpjs": "^3.4.7",
     "@types/supertest": "^6.0.2",
     "dotenv-cli": "^8.0.0",
     "eslint": "^9.18.0",
