--- a/package.json
+++ b/package.json
@@ -38,11 +38,12 @@
     "@nestjs/schedule": "^6.0.0",
     "@prisma/client": "^6.8.2",
     "argon2": "^0.43.0",
-    "axios": "^1.10.0",
+    "axios": "^1.11.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "protobufjs": "^7.5.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "shapefile": "^0.6.6",
