--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "axios": "^1.11.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "csv-parse": "^5.6.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "protobufjs": "^7.5.3",
