feat(MVP): otp cron job

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cybus-api",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Popov Vadim",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -39,6 +39,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/schedule": "^6.0.0",
     "@prisma/client": "^6.8.2",
+    "archiver": "^7.0.1",
     "argon2": "^0.43.0",
     "axios": "^1.11.0",
     "class-transformer": "^0.5.1",
@@ -60,6 +61,7 @@
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
+    "@types/archiver": "^6.0.3",
     "@types/axios": "^0.9.36",
     "@types/express": "^5.0.0",
     "@types/geojson": "^7946.0.16",
