--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,13 +22,13 @@ services:
       - cybus-network
     container_name: cybus-test-db
   otp:
-    image: opentripplanner/opentripplanner:v2.4.0
+    image: docker.io/opentripplanner/opentripplanner:latest
     container_name: otp
     ports:
       - "8080:8080"
     volumes:
-      - ./data/otp:/var/otp
-    command: --build /var/otp --serve
+      - ./data/otp:/var/opentripplanner
+    command: --build --save --serve
     networks:
       - cybus-network
 
