--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "cybus-api",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Popov Vadim",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
     "prisma:dev:deploy": "prisma migrate deploy",
-    "db:dev:rm": "docker compose rm dev-db -s -f -v",
-    "db:dev:up": "docker compose up dev-db -d",
+    "db:dev:rm": "docker compose rm dev-db otp -s -f -v",
+    "db:dev:up": "docker compose up dev-db otp -d",
     "db:dev:restart": "yarn db:dev:rm && yarn db:dev:up && sleep 1 && yarn prisma:dev:deploy",
+    "dev:up": "yarn db:dev:up && sleep 1 && yarn prisma:dev:deploy",
     "prisma:test:deploy": "dotenv -e .env.test -- prisma migrate deploy",
     "db:test:rm": "docker compose rm test-db -s -f -v",
     "db:test:up": "docker compose up test-db -d",
@@ -38,6 +39,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/schedule": "^6.0.0",
     "@prisma/client": "^6.8.2",
+    "archiver": "^7.0.1",
     "argon2": "^0.43.0",
     "axios": "^1.11.0",
     "class-transformer": "^0.5.1",
@@ -59,6 +61,7 @@
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
+    "@types/archiver": "^6.0.3",
     "@types/axios": "^0.9.36",
     "@types/express": "^5.0.0",
     "@types/geojson": "^7946.0.16",
