--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cybus-api",
-  "version": "0.0.1",
-  "description": "",
+  "version": "0.0.2",
+  "description": "Cybus API service",
   "author": "Popov Vadim",
   "private": true,
   "license": "Apache-2.0",
@@ -45,6 +45,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "csv-parse": "^5.6.0",
+    "node-telegram-bot-api": "^0.66.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "protobufjs": "^7.5.3",
@@ -67,6 +68,7 @@
     "@types/geojson": "^7946.0.16",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
+    "@types/node-telegram-bot-api": "^0.64.11",
     "@types/passport-jwt": "^4.0.1",
     "@types/shpjs": "^3.4.7",
     "@types/supertest": "^6.0.2",
